# AI-medication-Operation-Orchestrator

./: .gitignore  .mcp.json  Docker Compose config to run complete stack (backend, frontend, database) with one command.yaml  README.md  docker-compose.yaml  openapi.yaml  package-lock.json  package.json
backend/: Dockerfile  FastAPI  conftest.py  mcp_server.py  pyproject.toml
backend/app/: __init__.py  analytics.py  db.py  interfaces.py  main.py  seed.py  types.py
backend/app/approval/: __init__.py
backend/app/audit/: __init__.py  models.py  routes.py  service.py
backend/app/config/: __init__.py  cache.py  errors.py  models.py
backend/app/consumption/: __init__.py  models.py
backend/app/dashboard/: __init__.py  routes.py
backend/app/decision_engine/: __init__.py  errors.py  functions.py
backend/app/forecasting/: __init__.py  features.py  lattice.py  models.py  routes.py  service.py  simple.py
backend/app/orchestration/: __init__.py  routes.py
backend/app/settings/: __init__.py  models.py  routes.py
backend/app/simulation/: __init__.py  scenario_runner.py
backend/app/stock/: __init__.py  fhir.py  models.py  routes.py  schemas.py
backend/app/task_management/: __init__.py
backend/tests/: test_config.py  test_decision_engine.py  test_forecasting.py  test_lattice.py  test_panels.py  test_scenarios.py  test_simple_predict.py  test_stock_api.py
data/synthetic/: README.md  generate_consumption.py  generate_hl7_inventory.py  reset.sql  seed.sql
docs/: schema.sql
frontend/: .gitignore  Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
(+22 files in other folders)
