[project]
name = "medication-platform-backend"
version = "0.1.0"
description = "AI-Driven Medication Operations and Task Management Platform — backend"
requires-python = ">=3.9"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
