[project]
name = "medication-platform-backend"
version = "0.1.0"
description = "AI-Driven Medication Operations and Task Management Platform — backend"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.2",
    "xgboost>=2.0",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
